--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -18,11 +18,13 @@
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.4.9",
+    "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.0",
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
+    "@types/vuelidate": "^0.7.13",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "@vue/cli-plugin-babel": "~4.5.0",
