--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -76,21 +76,23 @@
         "@vue/cli-service": "~4.5.0",
         "@vue/eslint-config-prettier": "^6.0.0",
         "@vue/eslint-config-typescript": "^7.0.0",
-        "eslint": "^6.7.2",
-        "eslint-plugin-prettier": "^3.3.1",
-        "eslint-plugin-vue": "^6.2.2",
-        "node-sass": "^5.0.0",
-        "prettier": "^2.2.1",
-        "sass": "^1.32.0",
-        "sass-loader": "^10.1.0",
-        "typescript": "^4.1.3",
-        "vue-cli-plugin-vuetify": "^2.0.9",
-        "vue-template-compiler": "^2.6.12",
-        "vuetify-loader": "^1.6.0",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
+        "eslint": "^6.7.2",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-vue": "^6.2.2",
         "lodash": "^4.17.13",
-        "resolve-url-loader": "^3.1.0"
+        "node-sass": "^5.0.0",
+        "prettier": "^2.2.1",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.32.0",
+        "sass-loader": "^10.1.0",
+        "stylus": "^0.54.8",
+        "stylus-loader": "^4.3.3",
+        "typescript": "^4.1.3",
+        "vue-cli-plugin-vuetify": "^2.0.9",
+        "vue-template-compiler": "^2.6.12",
+        "vuetify-loader": "^1.6.0"
     }
 }
